--- a/index.html
+++ b/index.html
@@ -4,22 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pseudoclases y pseudoelementos</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Proyecto</title>
 </head>
 <body>
-    <header></header>
-    <main>
-    <p>Parrafo 1</p>
-    <p>Parrafo 2</p>
-    <p>Parrafo 3</p>
-    <a href="https://www.mclibre.org/consultar/htmlcss/css/css-pseudoclases.html" target="_blank">Pseudoelementos</a>
-    <form action="">
-        <label for="nombre">Nombre<input id="nombre" type="text"></label>
-    </form>
-    <p>Esto es una cita en español: <cite lang="es">Solo se que no se nada</cite></p>
-    <p>Esto es una cita en inglés: <cite lang="en">A rose by any other name would smell as sweet.</cite></p>
-    </main>
-    <footer></footer>
+    <h1>Pagina del proyecto</h1>
 </body>
 </html>
