--- a/index.html
+++ b/index.html
@@ -1,12 +1,90 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto</title>
-</head>
-<body>
-    <h1>Pagina del proyecto</h1>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Mi página web</title>
+    <link rel="stylesheet" href="css/estilos.css"/>
+  </head>
+  <body>
+    <div class="header">
+      <header>
+        <nav>
+          <h1 class="nombre">Francisco Javier Gonzalez</h1>
+          <ul>
+            <li>
+              <a class="links" href="./index.html">Página Principal</a>
+            </li>
+            <li>
+              <a class="links" href="./curriculum.html">Currículum Vitae</a>
+            </li>
+            <li>
+              <a class="links" href="./formulario.html">Formulario</a>
+            </li>
+            <li>
+              <a class="links" href="./video.html">Vídeo</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+    </div>
+    <main>
+      <h1 class="hobbies">Mis hobbies</h1>
+      <div class="lista1">
+      <h2>Los videojuegos</h2>
+      <p>
+        Aunque ya no tanto como antes, los videojuegos a dia de hoy siguen
+        siendo uno de mis mayores pasatiempos, <br>
+        sobre todo si juego con amigos, pero los que mas me gusta son los juegos
+        de un jugador. <br>
+        Siempre que puedo intento completarlos al 100%. No podria decir cual es
+        mi juego favorito, pero si tuviera que decir 3 serían:
+      </p>
+      <ul>
+        <li><em>God of War(2018)</em></li> <img class="gow" src="./imagenes/gow.jpg" alt="GoW"/>
+        <li><em>NieR:Automata</em></li> <img class="nier" src="./imagenes/nier.jpg" alt="Nier"/>
+        <li><em>Assassin´s Creed II</em></li> <img class="ac" src="./imagenes/ac2.jfif" alt="ac"/>
+      </ul>
+    </div>
+    <div class="lista2">
+      <h2>El manga/anime</h2>
+      <p>
+        Son los productos de entretinimiento que mas disfruto. Tanto las
+        historias como los personajes que hay en estos medios <br>
+        y sobre todo, el dibujo es lo que mas me gusta de ellas
+      </p>
+    </div>
+    <div class="lista3">
+      <h2>La música</h2>
+      <p>
+        Es a lo que mas tiempo le dedico con diferencia. Me gusta tanto la
+        musica de una manera que no se ni explicar, <br>
+        creo que es de las pocas cosas que puede unir a la gente
+        independientemente del genero o la letra. Mi género <br>
+        favorito es el rap, aunque en realidad me gusta todo tipo de musica, de
+        hecho, mi grupo favorito es la banda de rock <br>
+        Linkin Park
+      </p>
+    </div>
+    </main>
+    <footer>
+      <div class="footer">
+        <p class="nombrefooter">Mis redes sociales:</p>
+        <br>
+        <p class="iconospdp"></p>
+        <ul class="redes">
+          <li>
+            <a target="blank" href="https://twitter.com/?lang=es"><img class="twt" src="./imagenes/twitter.png" alt="Twitter"/></a>
+          </li>
+          <li>
+            <a target="blank" href="https://www.instagram.com/?hl=es"><img class="ig" src="./imagenes/Instagram.webp" alt="instagram"/></a>
+          </li>
+          <li><a target="blank" href="https://github.com/franciscogonzalez65"><img class="git" src="./imagenes/git.png" alt="github" />
+            </a>
+          </li>
+        </ul>
+      </div>
+    </footer>
+  </body>
 </html>
