--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi página web</title>
-    <link rel="stylesheet" href="css/estilos.css"/>
+    <link rel="stylesheet" href="css/estilos.css">
   </head>
   <body>
     <div class="header">
       <header>
+        <h1>Francisco Javier Gonzalez</h1>
         <nav>
-          <h1 class="nombre">Francisco Javier Gonzalez</h1>
           <ul>
             <li>
               <a class="links" href="./index.html">Página Principal</a>
@@ -42,9 +42,9 @@
         mi juego favorito, pero si tuviera que decir 3 serían:
       </p>
       <ul>
-        <li><em>God of War(2018)</em></li> <img class="gow" src="./imagenes/gow.jpg" alt="GoW"/>
-        <li><em>NieR:Automata</em></li> <img class="nier" src="./imagenes/nier.jpg" alt="Nier"/>
-        <li><em>Assassin´s Creed II</em></li> <img class="ac" src="./imagenes/ac2.jfif" alt="ac"/>
+        <li><em>God of War(2018)</em><img class="gow" src="./imagenes/gow.jpg" alt="GoW"></li> 
+        <li><em>NieR:Automata</em><img class="nier" src="./imagenes/nier.jpg" alt="Nier"></li> 
+        <li><em>Assassin´s Creed II</em><img class="ac" src="./imagenes/ac2.jfif" alt="ac"></li> 
       </ul>
     </div>
     <div class="lista2">
@@ -75,12 +75,12 @@
         <p class="iconospdp"></p>
         <ul class="redes">
           <li>
-            <a target="blank" href="https://twitter.com/?lang=es"><img class="twt" src="./imagenes/twitter.png" alt="Twitter"/></a>
+            <a target="blank" href="https://twitter.com/?lang=es"><img class="twt" src="./imagenes/twitter.png" alt="Twitter"></a>
           </li>
           <li>
-            <a target="blank" href="https://www.instagram.com/?hl=es"><img class="ig" src="./imagenes/Instagram.webp" alt="instagram"/></a>
+            <a target="blank" href="https://www.instagram.com/?hl=es"><img class="ig" src="./imagenes/Instagram.webp" alt="instagram"></a>
           </li>
-          <li><a target="blank" href="https://github.com/franciscogonzalez65"><img class="git" src="./imagenes/git.png" alt="github" />
+          <li><a target="blank" href="https://github.com/franciscogonzalez65"><img class="git" src="./imagenes/git.png" alt="github">
             </a>
           </li>
         </ul>
