--- a/video.html
+++ b/video.html
@@ -1,52 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi página web</title>
-    <link rel="stylesheet" href="css/estilos.css" />
+    <link rel="stylesheet" href="css/estilos.css">
   </head>
   <body>
-    <header>
-      <div class="header">
+    <div class="header">
+      <header>
         <h1>Francisco Javier Gonzalez</h1>
-        <ul>
-          <li>
-            <a href="./index.html">Página Principal</a>
-          </li>
-          <li>
-            <a href="./curriculum.html">Currículum Vitae</a>
-          </li>
-          <li>
-            <a href="./formulario.html">Formulario</a>
-          </li>
-          <li>
-            <a href="./video.html">Vídeo</a>
-          </li>
-        </ul>
-      </div>
-    </header>
-
-    <footer>
+        <nav>
+          <ul>
+            <li>
+              <a class="links" href="./index.html">Página Principal</a>
+            </li>
+            <li>
+              <a class="links" href="./curriculum.html">Currículum Vitae</a>
+            </li>
+            <li>
+              <a class="links" href="./formulario.html">Formulario</a>
+            </li>
+            <li>
+              <a class="links" href="./video.html">Vídeo</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+    </div>
+    <div class="video">
+      <p>En este vídeo explico como he realizado mi página web: </p>
+      <iframe width="1275" height="717" src="https://www.youtube.com/embed/Nq91hgJXLUU" title="Creación de página web sencilla" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+       <footer>
       <div class="footer">
         <p class="nombrefooter">Mis redes sociales:</p>
-        <br />
+        <br>
         <p class="iconospdp"></p>
         <ul class="redes">
           <li>
-            <a target="blank" href="https://twitter.com/?lang=es"
-              ><img class="twt" src="./imagenes/twitter.png" alt="Twitter"
-            /></a>
+            <a target="blank" href="https://twitter.com/?lang=es"><img class="twt" src="./imagenes/twitter.png" alt="Twitter"></a>
           </li>
           <li>
-            <a target="blank" href="https://www.instagram.com/?hl=es"
-              ><img class="ig" src="./imagenes/Instagram.webp" alt="instagram"
-            /></a>
+            <a target="blank" href="https://www.instagram.com/?hl=es"><img class="ig" src="./imagenes/Instagram.webp" alt="instagram"></a>
           </li>
-          <li>
-            <a target="blank" href="https://github.com/franciscogonzalez65">
-              <img class="git" src="./imagenes/git.png" alt="github" />
+          <li><a target="blank" href="https://github.com/franciscogonzalez65"><img class="git" src="./imagenes/git.png" alt="github">
             </a>
           </li>
         </ul>
