--- a/curriculum.html
+++ b/curriculum.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,61 +8,63 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
+  <div class="header">
     <header>
-        <div class="header">
-        <h1>Francisco Javier Gonzalez</h1>
+      <h1>Francisco Javier Gonzalez</h1>
+      <nav>
         <ul>
-            <li>
-                <a href="./index.html">Página Principal</a>
-            </li>
-            <li>
-                <a href="./curriculum.html">Currículum Vitae</a>
-            </li>
-            <li>
-                <a href="./formulario.html">Formulario</a>
-            </li>
-            <li>
-                <a href="./video.html">Vídeo</a>
-            </li>
+          <li>
+            <a class="links" href="./index.html">Página Principal</a>
+          </li>
+          <li>
+            <a class="links" href="./curriculum.html">Currículum Vitae</a>
+          </li>
+          <li>
+            <a class="links" href="./formulario.html">Formulario</a>
+          </li>
+          <li>
+            <a class="links" href="./video.html">Vídeo</a>
+          </li>
         </ul>
-        </div>
+      </nav>
     </header>
-
-
-
-
-
-
-
-
+  </div>
+  <nav class="curriculum">
+    <h2>Nombre Completo:</h2>
+    <h4>Francisco Javier González Fernández</h4>
+    <h2>Experiencia Laboral:</h2>
+    <h4>
+    Todavia no tengo experencia en el sector laboral, pero tengo ganas de terminar el curso e ir de prácticas
+    </h4>
+    <h2>Formación Académica:</h2>
+    <h4>
+      Certificado de acceso a Grado Medio, y a punto de acabar grado medio en Sistemas
+      Microinformaticos y Redes.
+    </h4>
+    <h2>Habilidades:</h2>
+    <h4>
+      Aprendo rápido y me adapto bien a nuevas situaciones
+    </h4>
+    <h2>Idiomas</h2>
+    <h4> Sin certificado de idiomas aunque considero que no tengo un mal nivel de inglés</h4>
+    </nav>
     <footer>
-        <div class="footer">
-          <p class="nombrefooter">Mis redes sociales:</p>
-          <br />
-          <p class="iconospdp"></p>
-          <ul class="redes">
-            <li>
-              <a
-                target="blank"
-                href="https://twitter.com/?lang=es"
-                ><img class="twt" src="./imagenes/twitter.png" alt="Twitter"
-              /></a>
-            </li>
-            <li>
-              <a
-                target="blank"
-                href="https://www.instagram.com/?hl=es"
-                ><img class="ig" src="./imagenes/Instagram.webp" alt="instagram"
-              /></a>
-            </li>
-            <li>
-                <a target="blank" href="https://github.com/franciscogonzalez65">
-                    <img class="git" src="./imagenes/git.png" alt="github">
-                </a>
-            </li>
-          </ul>
-        </div>
-      </footer>
-    </div>
+      <div class="footer">
+        <p class="nombrefooter">Mis redes sociales:</p>
+        <br>
+        <p class="iconospdp"></p>
+        <ul class="redes">
+          <li>
+            <a target="blank" href="https://twitter.com/?lang=es"><img class="twt" src="./imagenes/twitter.png" alt="Twitter"></a>
+          </li>
+          <li>
+            <a target="blank" href="https://www.instagram.com/?hl=es"><img class="ig" src="./imagenes/Instagram.webp" alt="instagram"></a>
+          </li>
+          <li><a target="blank" href="https://github.com/franciscogonzalez65"><img class="git" src="./imagenes/git.png" alt="github">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
