--- a/curriculum.html
+++ b/curriculum.html
@@ -25,6 +25,9 @@
           <li>
             <a class="links" href="./video.html">Vídeo</a>
           </li>
+          <li>
+            <a class="links" href="./Documentacion web sencilla Francisco Javier Gonzalez.pdf">Documentacion</a>
+          </li>
         </ul>
       </nav>
     </header>
