--- a/formulario.html
+++ b/formulario.html
@@ -9,41 +9,43 @@
 </head>
 <body>
     <div class="header">
-        <header>
-          <h1>Francisco Javier Gonzalez</h1>
-          <nav>
-            <ul>
-              <li>
-                <a class="links" href="./index.html">Página Principal</a>
-              </li>
-              <li>
-                <a class="links" href="./curriculum.html">Currículum Vitae</a>
-              </li>
-              <li>
-                <a class="links" href="./formulario.html">Formulario</a>
-              </li>
-              <li>
-                <a class="links" href="./video.html">Vídeo</a>
-              </li>
-            </ul>
-          </nav>
-        </header>
+      <header>
+        <h1>Francisco Javier Gonzalez</h1>
+        <nav>
+          <ul>
+            <li>
+              <a class="links" href="./index.html">Página Principal</a>
+            </li>
+            <li>
+              <a class="links" href="./curriculum.html">Currículum Vitae</a>
+            </li>
+            <li>
+              <a class="links" href="./formulario.html">Formulario</a>
+            </li>
+            <li>
+              <a class="links" href="./video.html">Vídeo</a>
+            </li>
+            <li>
+              <a class="links" href="./Documentacion web sencilla Francisco Javier Gonzalez.pdf">Documentacion</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
       </div>
       <nav class="formulario">
         <form>
-         <label> <p>Nombre: <input class="nmbr" type="text" /></p></label>
-          <br />
-          <label><p>Apellidos: <input class="papellido" type="text" placeholder="Escriba sus apellidos"></p></label>
-          <br />
-          <label><p>Correo Electronico: <input class="correo" type="email" /></p></label>
-          <br />
-          <label><p>Número de Teléfono: <input class="tlf" type="tel" maxlength="9"></p></label>
-          <br />
-          <label><p>Dirección: <input class="direccion" type="text"></p> <br></label>
-            Tipo de jornada: <br />
+         <label>Nombre: <input class="nmbr" type="text" /></label>
+          <br>
+          <label>Apellidos: <input class="papellido" type="text" placeholder="Escriba sus apellidos"></p></label>
+          <br>
+          <label>Correo Electronico: <input class="correo" type="email" /></p></label>
+          <br>
+          <label>Número de Teléfono: <input class="tlf" type="tel" maxlength="9"></p></label>
+          <br>
+          <label>Dirección: <input class="direccion" type="text"></p> <br></label>
+            Tipo de jornada: <br>
             <input class="radio" name="horas" type="radio" /> Media Jornada
-          </p>
-          <br />
+          <br>
           <p><input name="horas" type="radio" /> Jornada Completa</p>
           <p>
             <textarea
@@ -57,11 +59,8 @@
           </p>
           <br />
           <div class="fecha">
-          <p>
-           Fecha para entrevista: <br />
+           Fecha para entrevista: <br>
             <input class="semana" type="date" />
-          </p>
-          <p>
             <input class="enviar" type="submit" />
             <input class="reset" type="reset" />
           </p>
